[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmony-tools-mcp"
version = "0.1.3"
description = "MCP service that wraps HarmonyOS hdc commands"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Harmony Tools" }
]
dependencies = [
    "fastmcp>=2.13.0",
]
keywords = ["harmony", "hdc", "mcp", "hvigor"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/99byte/harmony-tools"
Repository = "https://github.com/99byte/harmony-tools"
Issues = "https://github.com/99byte/harmony-tools/issues"

[project.scripts]
harmony-tools-mcp = "harmony_tools.mcp_service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harmony_tools"]
